grammar.js
    source_file: ($) => repeat($._pelt),

    // Comment rule
    _pelt: ($) =>
      choice(
        $.pragma,
        $.incld,
        $.mdefn,
        $.idecl,
        $.xdecl,
        $.ldecl,
        $.lconstructor,
        $.cdefn,
        $.wdecl,
        $.ecdecl,
        $.struct,
        $.enumdef,
        $.type_alias_declaration,
      ),

    // Pragma rules
    //
    // pragma →	pragma id version-expr ;
    gparams: ($) => seq("<", commaSep1(field("gparam", $.generic_param)), ">"),

    // Generic-parameter (generic-param)
    //
    // generic-param → # tvar-name
    //               → tvar-name
    generic_param: ($) => choice(seq("#", $.tvar_name), $.tvar_name),

    // Import-declaration (idecl)
    //
    // idecl → import selection^opt import-name gargs^opt prefix^opt ;
    idecl: ($) =>
      seq(
        "import",
        optional(field("selection", $.import_selection)),
        field("id", $.import_name),
        optional(field("gargs", $.gargs)),
        optional(field("prefix", $.prefix)),
        ";"
      ),

    // Import-selection (import-selection)
    //
    // import-selection → { import-element , … , import-element } from
    import_selection: ($) => seq("{", commaSep1($.import_element), "}", "from"),

    // Import-element (import-element)
    //
    // import-element → id
    //                → id as id
    import_element: ($) => choice(
      field("id", $.id),
      seq(field("id", $.id), "as", field("alias", $.id))
    ),

    // Import-name (import-name)
    //
    // import-name → id
    //             → file
    import_name: ($) => choice($.id, $.file),

    // Generic-argument-list (gargs)
    //
    // gargs → < garg , … , garg >
    gargs: ($) => seq("<", commaSep1(field("garg", $.garg)), ">"),

    // Import-prefix (prefix)
    //
    // prefix → prefix id
    prefix: ($) => seq("prefix", field("id", $.id)),

    // Export-modifier (export)
    //
    // export → export
    export: ($) => "export",

    // Sealed-modifier (sealed)
    //
    // sealed → sealed
    sealed: ($) => "sealed",

    // Pure-modifier (pure)
    //
    // pure → pure
    pure: ($) => "pure",

    // Export-declaration (xdecl)
    //
    // xdecl → export { id , … , id } ;^opt
    ldecl: ($) =>
      seq(
        optional(field("export", $.export)),
        optional(field("sealed", $.sealed)),
        "ledger",
        field("name", $.id),
        ":",
        field("type", $.type),
        ";",
      ),

    // Constructor (lconstructor)
    //
    // lconstructor → constructor ( parg , … , parg ) block ;opt
    ecdecl: ($) =>
      seq(
        optional(field("export", $.export)),
        "contract",
        field("name", $.contract_name),
        choice($._ecdecl_body_semicolon, $._ecdecl_body_comma),
        optional(";"),
      ),

    // { ecdecl-circuit ; … ; ecdecl-circuit ;^opt }
    _ecdecl_body_semicolon: ($) => seq("{",
      field("contract_circuit", $.ecdecl_circuit),
      repeat(seq(";", field("contract_circuit", $.ecdecl_circuit))),
      optional(";"), "}"),

    // { ecdecl-circuit , … , ecdecl-circuit ,^opt }
    _ecdecl_body_comma: ($) => prec(1, seq("{",
      commaSep1(field("contract_circuit", $.ecdecl_circuit)),
      "}")),

    // External-contract-circuit (ecdecl-circuit)
    //
    // ecdecl-circuit → pure^opt circuit id ( arg , … , arg ) : type
    ecdecl_circuit: ($) =>
      seq(
        optional(field("pure", $.pure)),
        "circuit",
        field("id", $.id),
        "(",
        commaSep(field("arg", $.arg)),
        ")",
        ":",
        field("type", $.type),
      ),

    // Structure-definition (struct)
    //
    // struct →	export^opt struct struct-name gparams^opt { arg ; … ; arg ;^opt } ;^opt
    //        →	export^opt struct struct-name gparams^opt { arg , … , arg  ,^opt } ;^opt
    arg: ($) => seq(field("id", $.id), ":", field("type", $.type)),

    // Pattern-argument (parg)
    //
    // parg → pattern : type
    type: ($) =>
      choice(
        $.tref,
        "Boolean",
        "Field",
        $.uint_type,
        $.bytes_type,
        $.opaque_type,
        $.vector_type,
        seq("[", commaSep($.type), "]"),
      ),

    uint_type: ($) => seq("Uint", "<", field("tsize", $.tsize), optional(seq("..", field("tsize", $.tsize))), ">"),
    vector_type: ($) => seq("Vector", "<", field("tsize", $.tsize), ",", field("type", $.type), ">"),

    // Type-reference (tref)
    //
    // tref → id gargs^opt
    tref: ($) => prec.left(seq(field("id", $.id), optional(field("gargs", $.gargs)))),

    // Type-size (tsize)
    //
    // tsize → nat
    //       → id
    tsize: ($) => choice($.nat, $.id),

    // Generic-argument (garg)
    //
    // garg → nat
    //      → type
    garg: ($) => choice($.nat, $.type),

    // Block (block)
    //
    // block → { stmt … stmt }
    id: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    function_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    contract_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,
    tvar_name: ($) => /[$a-zA-Z_][$a-zA-Z0-9_]*/,

    // field-literal (nat)
    //
    // a field literal is 0 or a natural number formed from a sequence
    // of digits starting with 1-9, hex (0x), octal (0o), or binary (0b)
    nat: ($) => choice("0", /[1-9][0-9]*/, /0[xX][0-9a-fA-F]+/, /0[oO][0-7]+/, /0[bB][01]+/),

    // string-literal (str, file)
    //
    // supports both double-quoted and single-quoted strings
    file: ($) => token(choice(/"([^"\\]|\\.)*"/, /'([^'\\]|\\.)*'/)),

    // version-literal (version)
    //
    // a version literal takes the form nat or nat.nat or nat.nat.nat,
    // e.g., 1.2 or 1.2.3, representing major, minor, and bugfix versions
